--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -9,7 +9,7 @@
 
 	<header>
 		<div class="container">
-		<h2>Twitter Sentiment Analysis, Negative or Positive </h2>
+		<h2>Twitter Sentiment Analysis - Negative or Positive </h2>
 		
 	</div>
 	</header>
